@@ -1,73 +1,78 @@
 package ladysnake.ratsmischief.common.item;
 
-import ladysnake.ratsmischief.common.RatsMischief;
+import com.mojang.serialization.Codec;
+import io.netty.buffer.ByteBuf;
 import ladysnake.ratsmischief.common.entity.RatEntity;
+import ladysnake.ratsmischief.common.init.ModDataComponents;
 import ladysnake.ratsmischief.common.init.ModEntities;
-import net.fabricmc.fabric.api.util.NbtType;
-import net.minecraft.client.item.TooltipContext;
+import ladysnake.ratsmischief.mialeemisc.util.MialeeText;
+import net.minecraft.component.ComponentsAccess;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.LivingEntity;
+import net.minecraft.entity.SpawnReason;
+import net.minecraft.entity.passive.TameableEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.tooltip.TooltipAppender;
+import net.minecraft.item.tooltip.TooltipType;
 import net.minecraft.nbt.NbtCompound;
-import net.minecraft.nbt.NbtElement;
-import net.minecraft.nbt.NbtList;
-import static net.minecraft.text.Style.EMPTY;
+import net.minecraft.network.codec.PacketCodec;
+import net.minecraft.network.codec.PacketCodecs;
+import net.minecraft.registry.Registries;
+import net.minecraft.server.world.ServerWorld;
+import net.minecraft.storage.NbtReadView;
+import net.minecraft.storage.NbtWriteView;
 import net.minecraft.text.Text;
-import net.minecraft.util.ActionResult;
-import net.minecraft.util.Formatting;
-import net.minecraft.util.Hand;
-import net.minecraft.util.Identifier;
-import net.minecraft.util.TypedActionResult;
-import net.minecraft.util.registry.Registry;
+import net.minecraft.util.*;
 import net.minecraft.world.World;
-import org.jetbrains.annotations.Nullable;
-import xyz.amymialee.mialeemisc.util.MialeeText;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+
+import static net.minecraft.text.Style.EMPTY;
 
 public class RatPouchItem extends Item {
-	private static final Predicate<RatEntity> CLOSEST_RAT_PREDICATE = (ratEntity) -> ratEntity.isTamed();
-	private final int size;
+	private static final Predicate<RatEntity> CLOSEST_RAT_PREDICATE = TameableEntity::isTamed;
 
-	public RatPouchItem(Settings settings, int size) {
+	public RatPouchItem(Settings settings) {
 		super(settings);
-		this.size = size;
 	}
 
 	@Override
-	public TypedActionResult<ItemStack> use(World world, PlayerEntity user, Hand hand) {
-		if (!world.isClient() && user.isSneaking()) {
-			if (user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).getFloat("filled") == 1f) {
-				for (NbtElement ratTag : user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).getList("rats", NbtType.COMPOUND)) {
-					RatEntity rat = ModEntities.RAT.create(world);
-					rat.readNbt((NbtCompound) ratTag);
+	public ActionResult use(World w, PlayerEntity user, Hand hand) {
+		if (w instanceof ServerWorld world && user.isSneaking()) {
+			ItemStack stack = user.getStackInHand(hand);
+			if (Boolean.TRUE.equals(stack.get(ModDataComponents.RAT_POUCH_FILLED))) {
+				for (NbtCompound ratTag : stack.get(ModDataComponents.STORED_RATS).rats()) {
+					RatEntity rat = ModEntities.RAT.create(world, SpawnReason.SPAWN_ITEM_USE);
+					rat.readData(NbtReadView.create(ErrorReporter.EMPTY, world.getRegistryManager(), ratTag));
 					rat.updatePosition(user.getX(), user.getY(), user.getZ());
 					rat.setPos(user.getX(), user.getY(), user.getZ());
 					world.spawnEntity(rat);
 				}
 
-				user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).put("rats", new NbtList());
-				user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).putFloat("filled", 0F);
+				stack.set(ModDataComponents.STORED_RATS, new StoredRats(List.of()));
+				stack.remove(ModDataComponents.RAT_POUCH_FILLED);
 
-				return TypedActionResult.success(user.getStackInHand(hand));
+				return ActionResult.SUCCESS;
 			} else {
-				NbtList NbtList = user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).getList("rats", NbtType.COMPOUND);
+				List<NbtCompound> list = new ArrayList<>(stack.get(ModDataComponents.STORED_RATS).rats());
 
 				List<RatEntity> closestTamedRats = world.getEntitiesByClass(RatEntity.class, user.getBoundingBox().expand(16.0D), CLOSEST_RAT_PREDICATE);
-				List<RatEntity> closestOwnedRats = closestTamedRats.stream().filter(ratEntity -> ratEntity.getOwnerUuid() != null && ratEntity.getOwnerUuid().equals(user.getUuid())).collect(Collectors.toList());
+				List<RatEntity> closestOwnedRats = closestTamedRats.stream().filter(ratEntity -> ratEntity.getOwnerReference() != null && ratEntity.getOwnerReference().uuidEquals(user)).toList();
 
-				if (closestOwnedRats.size() > 0) {
-					for (int i = 0; i < this.size; i++) {
+				if (!closestOwnedRats.isEmpty()) {
+					for (int i = 0; i < stack.get(ModDataComponents.RAT_POUCH_CAPACITY); i++) {
 						if (i < closestOwnedRats.size()) {
-							NbtCompound nbt = new NbtCompound();
-							closestOwnedRats.get(i).saveNbt(nbt);
-//							nbt.remove("UUID");
-							NbtList.add(nbt);
+							NbtWriteView writeView = NbtWriteView.create(ErrorReporter.EMPTY, user.getWorld().getRegistryManager());
+							closestOwnedRats.get(i).writeData(writeView);
+							NbtCompound nbt = writeView.getNbt();
+							nbt.remove("UUID");
+							list.add(nbt);
 							closestOwnedRats.get(i).playSpawnEffects();
 							closestOwnedRats.get(i).remove(Entity.RemovalReason.DISCARDED);
 						} else {
@@ -75,75 +80,76 @@ public class RatPouchItem extends Item {
 						}
 					}
 
-					user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).put("rats", NbtList);
-					user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).putFloat("filled", 1F);
-					return TypedActionResult.success(user.getStackInHand(hand));
+					stack.set(ModDataComponents.STORED_RATS, new StoredRats(list));
+					stack.set(ModDataComponents.RAT_POUCH_FILLED, true);
+					return ActionResult.SUCCESS;
 				} else {
-					return TypedActionResult.fail(user.getStackInHand(hand));
+					return ActionResult.FAIL;
 				}
 			}
 		}
 
-		return super.use(world, user, hand);
+		return super.use(w, user, hand);
 	}
-
+	public int getSize(ItemStack stack){
+		return stack.get(ModDataComponents.RAT_POUCH_CAPACITY);
+	}
 	@Override
 	public ActionResult useOnEntity(ItemStack stack, PlayerEntity user, LivingEntity entity, Hand hand) {
-		NbtList NbtList = user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).getList("rats", NbtElement.COMPOUND_TYPE);
-
-		if (NbtList.size() < this.size && entity instanceof RatEntity && ((RatEntity) entity).getOwnerUuid() != null && ((RatEntity) entity).getOwnerUuid().equals(user.getUuid())) {
-			NbtCompound NbtCompound = new NbtCompound();
-			entity.saveNbt(NbtCompound);
-			NbtList.add(NbtCompound);
-			user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).put("rats", NbtList);
-			((RatEntity) entity).playSpawnEffects();
+		List<NbtCompound> list = new ArrayList<>(stack.get(ModDataComponents.STORED_RATS).rats());
+		int size = getSize(stack);
+		if (list.size() < size && entity instanceof RatEntity rat && rat.getOwnerReference() != null && rat.getOwnerReference().uuidEquals(user)) {
+			NbtWriteView writeView = NbtWriteView.create(ErrorReporter.EMPTY, user.getWorld().getRegistryManager());
+			rat.writeData(writeView);
+			list.add(writeView.getNbt());
+			stack.set(ModDataComponents.STORED_RATS, new StoredRats(list));
+			rat.playSpawnEffects();
 			entity.remove(Entity.RemovalReason.DISCARDED);
-			user.getStackInHand(hand).getOrCreateSubNbt(RatsMischief.MOD_ID).putFloat("filled", 1F);
-
+			stack.set(ModDataComponents.RAT_POUCH_FILLED, true);
 			return ActionResult.SUCCESS;
 		} else {
 			return ActionResult.PASS;
 		}
 	}
+	public record StoredRats(List<NbtCompound> rats) implements TooltipAppender {
+		public static final Codec<StoredRats> CODEC = NbtCompound.CODEC.listOf().xmap(StoredRats::new, StoredRats::rats);
+		public static final PacketCodec<ByteBuf, StoredRats> PACKET_CODEC = PacketCodecs.NBT_COMPOUND.collect(PacketCodecs.toList()).xmap(StoredRats::new, StoredRats::rats);
 
-	@Override
-	public void appendTooltip(ItemStack stack, @Nullable World world, List<Text> tooltip, TooltipContext context) {
-		var NbtList = stack.getOrCreateSubNbt(RatsMischief.MOD_ID).getList("rats", NbtElement.COMPOUND_TYPE);
+		@Override
+		public void appendTooltip(TooltipContext context, Consumer<Text> textConsumer, TooltipType type, ComponentsAccess components) {
+			textConsumer.accept(Text.translatable("item.ratsmischief.rat_pouch.tooltip.capacity", rats.size(), components.get(ModDataComponents.RAT_POUCH_CAPACITY)).setStyle(EMPTY.withColor(Formatting.GRAY)));
 
-		tooltip.add(Text.translatable("item.ratsmischief.rat_pouch.tooltip.capacity", NbtList.size(), this.size).setStyle(EMPTY.withColor(Formatting.GRAY)));
-
-		for (var ratTag : NbtList) {
-			var style = EMPTY.withColor(Formatting.DARK_GRAY);
-			if (((NbtCompound) ratTag).getString("RatType").equals(RatEntity.Type.GOLD.name())) {
-				style = EMPTY.withColor(Formatting.GOLD);
-			}
-			var ratType = Text.translatable("type.ratsmischief." + ((NbtCompound) ratTag).getString("RatType").toLowerCase()).setStyle(style);
-
-			// name
-			var text = ratType;
-			if (((NbtCompound) ratTag).contains("CustomName")) {
-				var matcher = Pattern.compile("\\{\"text\":\"(.+)\"\\}").matcher(((NbtCompound) ratTag).getString("CustomName"));
-				if (matcher.find()) {
-					var name = matcher.group(1);
-					text = Text.literal(name).append(" (").append(ratType).append(")");
+			for (NbtCompound ratTag : rats) {
+				var style = EMPTY.withColor(Formatting.DARK_GRAY);
+				if (ratTag.getString("RatType").equals(RatEntity.Type.GOLD.name())) {
+					style = EMPTY.withColor(Formatting.GOLD);
 				}
-			}
+				var ratType = Text.translatable("type.ratsmischief." + ratTag.getString("RatType", "").toLowerCase()).setStyle(style);
 
-			// spy
-			if (((NbtCompound) ratTag).getBoolean("Spy")) {
-				text = text.append(" (").append(Text.translatable("item.ratsmischief.rat.tooltip.spy").setStyle(EMPTY.withColor(Formatting.DARK_GREEN))).append(")");
-			}
+				// name
+				var text = ratType;
+				if (ratTag.contains("CustomName")) {
+					var matcher = Pattern.compile("\\{\"text\":\"(.+)\"\\}").matcher(ratTag.getString("CustomName", ""));
+					if (matcher.find()) {
+						var name = matcher.group(1);
+						text = Text.literal(name).append(" (").append(ratType).append(")");
+					}
+				}
 
-			// potion genes
-			var potionId = new Identifier(((NbtCompound) ratTag).getString("PotionGene"));
-			var statusEffect = Registry.STATUS_EFFECT.get(potionId);
-			if (statusEffect != null) {
-				text = text.append(" (").append(Text.translatable("item.ratsmischief.rat.tooltip.potion").setStyle(EMPTY.withColor(Formatting.GRAY)).append(MialeeText.withColor(Text.translatable(statusEffect.getTranslationKey()).setStyle(EMPTY), statusEffect.getColor()))).append(")");
-			}
+				// spy
+				if (ratTag.getBoolean("Spy", false)) {
+					text = text.append(" (").append(Text.translatable("item.ratsmischief.rat.tooltip.spy").setStyle(EMPTY.withColor(Formatting.DARK_GREEN))).append(")");
+				}
 
-			tooltip.add(text);
+				// potion genes
+				var potionId = Identifier.tryParse(ratTag.getString("PotionGene", ""));
+				var statusEffect = Registries.STATUS_EFFECT.get(potionId);
+				if (statusEffect != null) {
+					text = text.append(" (").append(Text.translatable("item.ratsmischief.rat.tooltip.potion").setStyle(EMPTY.withColor(Formatting.GRAY)).append(MialeeText.withColor(Text.translatable(statusEffect.getTranslationKey()).setStyle(EMPTY), statusEffect.getColor()))).append(")");
+				}
+
+				textConsumer.accept(text);
+			}
 		}
-
-		super.appendTooltip(stack, world, tooltip, context);
 	}
 }
